x/pkgsite: fix the width of Subdirectories table
The subdirectories table is overflowing for package
https://pkg.go.dev//k8s.io/kubernetes hence adding a maximum width
to the table.

Fixes golang/go#40946

GitHub-Last-Rev: ea918f1e1e874d4dd0b26f944d784f4e562216da
GitHub-Pull-Request: golang/pkgsite#4
Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/249839

--- a/content/static/css/stylesheet.css
+++ b/content/static/css/stylesheet.css
@@ -1354,8 +1354,9 @@ table.Directories {
   max-width: 800px;
 }
 .Directories td {
-  padding: 0.75rem 0;
   border-bottom: 0.0625rem solid var(--gray-8);
+  max-width: 30rem;
+  padding: 0.75rem 0;
   padding-right: 1rem;
 }
 .Directories th {
